--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,7 @@
                 <!-- 로그인한 사용자만 볼 수 있는 내용 -->
                 <p class="text-white m-0 me-3">Welcome, <span th:text="${#authentication.principal.name}"></span>!</p>
             </div>
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto pt-1">
                 <li class="nav-item"><a th:href="@{/}" class="nav-link ">Home</a></li>
                 <li class="nav-item"><a th:href="@{/research/list}" class="nav-link ">List</a></li>
                 <li class="nav-item"><a th:href="@{/user/test}" class="nav-link ">UserPage</a></li>
