--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -203,6 +203,7 @@ body{
     /*position: absolute;*/
     /*top: 10%;*/
     /*left: 0;*/
+    height: 100%;
     width: 23em;
     /*height: 80%;*/
     /*max-height: 80%; !* 최대 높이를 지정 *!*/
