--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -36,29 +36,15 @@
                     </label>
 
                     <ul class="question-list m-0 p-0">
-                        <li class="question-item d-flex col justify-content-evenly" draggable="true">
-                            <div class="item-numbering col-1">1</div>
-                            <textarea class="col-8" placeholder="보기를 입력하세요" oninput="handleQuestionItemType0Input(this)"></textarea>
-                            <button class="question-item-delete col-1 btn btn-toolbar shadow-none bg-transparent" onclick="handleQuestionItemDeleteButtonClick(this)">
-                                <span>del</span>
-                            </button>
-                        </li>
-                        <li class="question-item d-flex col justify-content-evenly" draggable="true">
-                            <div class="item-numbering col-1">2</div>
-                            <textarea class="col-8" placeholder="보기를 입력하세요" oninput="handleQuestionItemType0Input(this)"></textarea>
-                            <button class="question-item-delete col-1 btn btn-toolbar shadow-none bg-transparent" onclick="handleQuestionItemDeleteButtonClick(this)">
-                                <span>del</span>
-                            </button>
-                        </li>
-                        <li class="question-item d-flex col justify-content-evenly" draggable="true">
-                            <div class="item-numbering col-1">3</div>
-                            <textarea class="col-8" placeholder="보기를 입력하세요" oninput="handleQuestionItemType0Input(this)"></textarea>
-                            <button class="question-item-delete col-1 btn btn-toolbar shadow-none bg-transparent" onclick="handleQuestionItemDeleteButtonClick(this)">
-                                <span>del</span>
-                            </button>
-                        </li>
+<!--                        <li class="question-item d-flex col justify-content-evenly" draggable="true">-->
+<!--                            <div class="item-numbering col-1">1</div>-->
+<!--                            <textarea class="col-8" placeholder="보기를 입력하세요" oninput="handleQuestionItemType0Input(this)"></textarea>-->
+<!--                            <button class="question-item-delete col-1 btn btn-toolbar shadow-none bg-transparent" onclick="handleQuestionItemDeleteButtonClick(this)">-->
+<!--                                <span>del</span>-->
+<!--                            </button>-->
+<!--                        </li>-->
                     </ul>
-                    <div onclick="handleQuestionItemAddButtonClick(this)">질문 추가</div>
+                    <div onclick="handleQuestionAddButtonOnMainContent(this)">질문 추가</div>
 
                 </div>
 
