--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -26,25 +26,39 @@
             <!--                hide scroll bar by cover another div-->
             <div class="d-flex col">
                 <div id="question-number" class="col-1 d-flex justify-content-end me-3">
-                    <span>1</span>
+                    <span style="display: none">0</span>
+                    <span>설문조사 정보</span>
                     <span>-></span>
                 </div>
 
                 <div class="col-11 pe-5">
-                    <label>
-                        <textarea placeholder="질문을 입력하세요" oninput="handleQuestionItemType0Input(this)"></textarea>
-                    </label>
+                    <textarea placeholder="제목을 입력하세요" oninput="autoResizeTextArea(this)"></textarea>
 
-                    <ul class="question-list m-0 p-0">
-<!--                        <li class="question-item d-flex col justify-content-evenly" draggable="true">-->
-<!--                            <div class="item-numbering col-1">1</div>-->
-<!--                            <textarea class="col-8" placeholder="보기를 입력하세요" oninput="handleQuestionItemType0Input(this)"></textarea>-->
-<!--                            <button class="question-item-delete col-1 btn btn-toolbar shadow-none bg-transparent" onclick="handleQuestionItemDeleteButtonClick(this)">-->
-<!--                                <span>del</span>-->
-<!--                            </button>-->
-<!--                        </li>-->
-                    </ul>
-                    <div onclick="handleQuestionAddButtonOnMainContent(this)">질문 추가</div>
+                    <textarea placeholder="부연 설명 (optional)" oninput="autoResizeTextArea(this)"></textarea>
+
+                    <div class="d-flex justify-content-between row">
+                        <div class="col-6">
+                            <div class="d-flex justify-content-between">
+                                <div class="col-4">
+                                    <span>시작일</span>
+                                </div>
+                                <div class="col-8">
+                                    <input type="date">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="d-flex justify-content-between">
+                                <div class="col-4">
+                                    <span>종료일</span>
+                                </div>
+                                <div class="col-8">
+                                    <input type="date">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
 
@@ -54,7 +68,7 @@
 
 
         <!--    토글 버튼-->
-        <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar">
+        <button class="sidebar-toggle shadow-none bg-transparent btn btn-toolbar" onclick="toggleAnimation(this)">
             <img alt="" src="/img/white-burger-menu-icon.png" width="10px" height="10px">
         </button>
     </div>
