--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -12,7 +12,7 @@
     <script th:inline="javascript">
         /* [[${registrationRSDTO}]] 값을 JavaScript 객체로 파싱 */
         let registrationRSDTO = /*[[${registrationRSDTO}]]*/ {};
-        console.log(registrationRSDTO)
+        // console.log(registrationRSDTO)
     </script>
     <div th:replace="~{fragments/sidebar :: sidebar}"></div>
 
