--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="col-11 pe-5">
-                    <textarea placeholder="제목을 입력하세요" oninput="autoResizeTextArea(this)"></textarea>
+                    <textarea placeholder="제목을 입력하세요" oninput="handleTextAreaInput(this, 'Q')"></textarea>
 
                     <textarea placeholder="부연 설명 (optional)" oninput="autoResizeTextArea(this)"></textarea>
 
